chore: configure adonis lucid

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
+# App
 PORT=3333
 HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=Ls4fuo84FodecgPkcxilmdQT1q4mV4dl
 DRIVE_DISK=local
+
+# Database
+DB_CONNECTION=pg
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=lucid
