--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "youch-terminal": "^2.1.3"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.0.12",
     "@adonisjs/core": "^5.4.0",
     "@adonisjs/lucid": "^17.1.0",
     "@adonisjs/repl": "^3.1.0",
