--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/auth": "^8.0.12",
     "@adonisjs/core": "^5.4.0",
     "@adonisjs/lucid": "^17.1.0",
+    "@adonisjs/redis": "^7.1.1",
     "@adonisjs/repl": "^3.1.0",
     "luxon": "^2.3.1",
     "pg": "^8.7.3",
