--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pg": "^8.7.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "tsyringe": "^4.6.0"
   }
 }
