--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "@adonisjs/lucid": "^17.1.0",
     "@adonisjs/redis": "^7.1.1",
     "@adonisjs/repl": "^3.1.0",
+    "@phc/argon2": "^1.0.9",
+    "date-fns": "^2.28.0",
     "luxon": "^2.3.1",
     "pg": "^8.7.3",
+    "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
