--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -4,7 +4,8 @@
     "./commands",
     "@adonisjs/core/build/commands/index.js",
     "@adonisjs/repl/build/commands",
-    "@adonisjs/lucid/build/commands"
+    "@adonisjs/lucid/build/commands",
+    "pretty-list-routes/build/commands/PrettyRoute.js"
   ],
   "exceptionHandlerNamespace": "App/Shared/Exceptions/Handler",
   "aliases": {
@@ -13,7 +14,10 @@
     "Database": "database",
     "Contracts": "contracts"
   },
-  "preloads": ["./start/routes", "./start/kernel"],
+  "preloads": [
+    "./start/routes",
+    "./start/kernel"
+  ],
   "providers": [
     "./providers/AppProvider",
     "@adonisjs/core",
@@ -21,5 +25,7 @@
     "@adonisjs/redis",
     "@adonisjs/auth"
   ],
-  "aceProviders": ["@adonisjs/repl"]
+  "aceProviders": [
+    "@adonisjs/repl"
+  ]
 }
