feat: dockerize app services

--- a/.env.example
+++ b/.env.example
@@ -4,17 +4,19 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=Ls4fuo84FodecgPkcxilmdQT1q4mV4dl
 DRIVE_DISK=local
+DB_CONNECTION=pg
 
 # Database
-DB_CONNECTION=pg
-PG_HOST=localhost
+PG_HOST=192.168.0.101
 PG_PORT=5432
-PG_USER=lucid
-PG_PASSWORD=
-PG_DB_NAME=lucid
+PG_USER=postgres
+PG_PASSWORD=postgres
+PG_DB_NAME=tkc_db
+PG_DEBUG=false
 
 # Redis
 REDIS_CONNECTION=local
-REDIS_HOST=127.0.0.1
+REDIS_HOST=192.168.0.101
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=redis
+
