--- a/package.json
+++ b/package.json
@@ -8,32 +8,35 @@
     "start": "node server.js",
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write .",
-    "db:reset": "node ace migration:rollback && node ace migration:run && node ace db:seed"
+    "db:reset": "node ace migration:rollback && node ace migration:run && node ace db:seed",
+    "docker:server": "node ace migration:run && node server.js"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^5.3.0",
+    "@adonisjs/assembler": "^5.4.2",
+    "add": "^2.0.6",
     "adonis-preset-ts": "^2.1.0",
-    "eslint": "^8.11.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-adonis": "^2.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "pino-pretty": "^7.5.4",
-    "prettier": "^2.6.0",
-    "typescript": "~4.5",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.3",
+    "yarn-upgrade-all": "^0.7.0",
     "youch": "^3.1.1",
     "youch-terminal": "^2.1.3"
   },
   "dependencies": {
     "@adonisjs/auth": "^8.0.12",
-    "@adonisjs/core": "^5.4.0",
-    "@adonisjs/lucid": "^17.1.0",
+    "@adonisjs/core": "^5.6.2",
+    "@adonisjs/lucid": "^17.1.1",
     "@adonisjs/redis": "^7.1.1",
-    "@adonisjs/repl": "^3.1.0",
+    "@adonisjs/repl": "^3.1.9",
     "@phc/argon2": "^1.0.9",
     "date-fns": "^2.28.0",
     "luxon": "^2.3.1",
     "pg": "^8.7.3",
     "phc-argon2": "^1.1.3",
+    "pino-pretty": "^7.6.0",
     "pretty-list-routes": "^0.0.5",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
