feat: update env

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ DRIVE_DISK=local
 DB_CONNECTION=pg
 
 # Database
-PG_HOST=192.168.0.101
+PG_HOST=localhost
 PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=postgres
@@ -16,7 +16,7 @@ PG_DEBUG=false
 
 # Redis
 REDIS_CONNECTION=local
-REDIS_HOST=192.168.0.101
+REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=redis
 
