feat: update docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
     env_file:
       - .env
     environment:
+      VIRTUAL_HOST: 18.231.170.205
+      LETSENCRYPT_HOST: 18.231.170.205
+
       PORT: ${PORT}
       HOST: ${HOST}
       NODE_ENV: ${NODE_ENV}
@@ -53,6 +56,7 @@ services:
       - 5432
     volumes:
       - database:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - app-network
 
