--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,8 @@ PG_PASSWORD=postgres
 PG_DB_NAME=tkc_db
 PG_DEBUG=false
 
+# Mailler
+SES_ACCESS_KEY=<aws-access-key>
+SES_ACCESS_SECRET=<aws-secret>
+SES_REGION=us-east-1
+CACHE_VIEWS=false
