--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "@adonisjs/auth": "^8.2.1",
     "@adonisjs/core": "^5.8.3",
     "@adonisjs/lucid": "^18.0.1",
+    "@adonisjs/mail": "^8.1.2",
     "@adonisjs/repl": "^3.1.11",
+    "@adonisjs/view": "^6.1.5",
     "@phc/argon2": "^1.0.9",
+    "aws-sdk": "^2.1161.0",
     "date-fns": "^2.28.0",
     "luxon": "^2.4.0",
     "pg": "^8.7.3",
