chore: update env example

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,9 @@ PG_PASSWORD=postgres
 PG_DB_NAME=tkc_db
 PG_DEBUG=false
 
-# Mailler
-SES_ACCESS_KEY=<aws-access-key>
-SES_ACCESS_SECRET=<aws-secret>
-SES_REGION=us-east-1
+# Amazon SES
+SES_ACCESS_KEY=
+SES_ACCESS_SECRET=
+SES_REGION=sa-east-1
+
 CACHE_VIEWS=false
