--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ DRIVE_DISK=local
 DB_CONNECTION=pg
 
 # Database
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
 PG_HOST=localhost
 PG_PORT=5432
 PG_USER=postgres
