--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
-    "tsyringe": "^4.7.0"
+    "tsyringe": "^4.7.0",
+    "url-parse": "^1.5.10"
   }
 }
